# AMPp

./: AMPpCore.cbp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  mpi_run.py
args/: play_motion_humanoid3d_adv_args.txt  play_motion_humanoid3d_drunk_args.txt  run_amp_target_humanoid3d_drunk_locomotion_args.txt  run_amp_target_humanoid3d_locomotion_args.txt  run_humanoid3d_disproportion_walk_args.txt  run_humanoid3d_drunk_args.txt  run_humanoid3d_jump_grav_args.txt  run_humanoid3d_spinkick2_args.txt  run_humanoid3d_spinkick_heavy_args.txt  train_amp_target_humanoid3d_drunk_locomotion_args.txt  train_humanoid3d_drunk_args.txt  train_humanoid3d_jump_grav_args.txt
data/characters/: humanoid3d_heavyhead.txt  humanoid3d_new.txt  humanoid3d_new2.txt
data/datasets/: humanoid3d_clips_drunk_locomotion.txt  humanoid3d_clips_walk_run_punch.txt
data/motions/: humanoid3d_adv.txt  humanoid3d_drunk_idle.txt
learning/nets/: net_builder.py  transfer.py
output/: agent0_log.txt  agent0_model.ckpt.index  char_state.txt
output/drunk1/: agent0_model.ckpt.index  drunk_log.txt
output/jump_grav/: agent0_log.txt  agent0_model.ckpt.index
src/: DeepMimicCore.cpp  DeepMimicCore.h  DeepMimicCore.i  Main.cpp  Makefile
src/anim/: Character.cpp  Character.h  ClipsController.cpp  ClipsController.h  KinCharacter.cpp  KinCharacter.h  KinController.cpp  KinController.h  KinCtrlBuilder.cpp  KinCtrlBuilder.h  KinTree.cpp  KinTree.h  Motion.cpp  Motion.h  MotionController.cpp  MotionController.h
src/render/: Camera.cpp  Camera.h  DrawCharacter.cpp  DrawCharacter.h  (+24 more)
(+90 files in other folders)
